--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,19 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffc4b4;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  color: #ff8b68;
 }
 
 h1 {
@@ -60,7 +52,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ff8b68;
   }
   button {
     background-color: #f9f9f9;
